--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate
+accelerate==0.15.0
 transformers>=4.21.0
 ftfy
 albumentations
@@ -8,3 +8,4 @@ diffusers[torch]==0.9.0
 pytorch_lightning
 bitsandbytes==0.35.0
 tensorboard
+safetensors
